Docker build and deploy.